# Password_Manager

./: .gitignore  CMakeLists.txt  README.md
src/: Crypto.cpp  Crypto.h  PasswordEntry.h  Vault.cpp  Vault.h  fileIOHandler.cpp  fileIOHandler.h  main.cpp
vaults/: personal.txt  work.txt  youtube.txt
